added header, sidebar and main component

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,10 @@
 .modal-backdrop {
   background-image: url('../assets/images/expense.jpg');
 }
+.content-wrap
+{
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
 
