--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="mail-page">
-<div class="modal modal-backdrop" id="myModal" [style.display]="showModal ? 'block' : 'none'">
+  <div class="modal modal-backdrop" id="myModal" [style.display]="showModal ? 'block' : 'none'">
   <div class="modal-dialog">
     <div class="modal-content" style="background: #E1E6E2">
 
@@ -34,3 +34,4 @@
   </div>
 </div>
 </div>
+<app-home></app-home>
